<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- https://central.sonatype.org/publish/requirements/ -->
	<groupId>io.github.davidebasile</groupId>
	<artifactId>contractautomatalib</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>ContractAutomataLib</name>
	<description>Library for specifying and verifying contract automata.</description>
	<url>https://github.com/ContractAutomataProject/ContractAutomataLib</url>

	<licenses>
		<license>
			<name>>GNU General Public License v3.0</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.rdf</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Davide Basile</name>
			<email>davide.basile@isti.cnr.it</email>
			<organization>ISTI CNR</organization>
			<organizationUrl>https://www.isti.cnr.it/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/davidebasile/ContractAutomataLib.git</connection>
		<developerConnection>scm:git:ssh://github.com:davidebasile/ContractAutomataLib.git</developerConnection>
		<url>http://github.com/davidebasile/ContractAutomataLib/tree/code-cleaning</url>
	</scm>

	<distributionManagement>
		<!-- https://central.sonatype.org/publish/publish-maven/ <snapshotRepository> 
			<id>ossrh</id> <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url> 
			</snapshotRepository> <repository> <id>ossrh</id> <name>Central Repository 
			OSSRH</name> <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url> 
			</repository> -->
		<repository>
			<id>github</id>
			<name>GitHub davidebasile Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/davidebasile/contractautomatalib</url>
		</repository>
	</distributionManagement>
	<properties>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.organization>contractautomataproject</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.10.0</version>
			<scope>test</scope>
		</dependency>
		<!-- fixing catastrophic backtracking of java regex https://github.com/google/re2j -->
		<dependency>
			<groupId>com.google.re2j</groupId>
			<artifactId>re2j</artifactId>
			<version>1.6</version>
		</dependency>
		<!-- https://www.sat4j.org/products.php -->
		<dependency>
			<groupId>org.ow2.sat4j</groupId>
			<artifactId>org.ow2.sat4j.core</artifactId>
			<version>2.3.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-gpg-plugin</artifactId>
			<version>3.0.1</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<pluginManagement>
			<plugins>
				<!-- https://central.sonatype.org/publish/publish-maven/ -->
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.7</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.5</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<!-- ****************************** -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.9</source>
						<target>1.9</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
					</configuration>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>single</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eluder.coveralls</groupId>
					<artifactId>coveralls-maven-plugin</artifactId>
					<version>4.3.0</version>
					<configuration> <!-- <https://github.com/trautonen/coveralls-maven-plugin/issues/64> -->
						<jacocoReports>
							<jacocoReport>${project.reporting.outputDirectory}/jacoco/jacoco.xml</jacocoReport>
						</jacocoReports>
					</configuration>
					<dependencies>
						<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
						<!-- https://github.com/trautonen/coveralls-maven-plugin/issues/141 -->
						<dependency>
							<groupId>javax.xml.bind</groupId>
							<artifactId>jaxb-api</artifactId>
							<version>2.3.1</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.7</version>
					<configuration>
						<excludes>
							<exclude>test/*</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<id>default-prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>default-report</id>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
						<execution>
							<id>default-check</id>
							<goals>
								<goal>check</goal>
							</goals>
							<configuration>
								<rules>
									<rule>
										<element>BUNDLE</element>
										<limits>
											<limit>
												<counter>COMPLEXITY</counter>
												<value>COVEREDRATIO</value>
												<minimum>0.60</minimum>
											</limit>
										</limits>
									</rule>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<!-- https://stackoverflow.com/questions/65200750/java-lang-noclassdeffounderror-org-apache-maven-doxia-siterenderer-documentcon -->
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.10.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<!-- https://spotbugs.readthedocs.io/en/latest/maven.html#goals-of-spotbugs-maven-plugin -->
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.5.3.0</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<!-- Optional directory to put spotbugs xdoc xml report -->
					<xmlOutputDirectory>target/site</xmlOutputDirectory>
					<!-- includeFilterFile>spotbugs-security-include.xml</includeFilterFile> 
						<excludeFilterFile>spotbugs-security-exclude.xml</excludeFilterFile> -->
					<plugins>
						<plugin>
							<groupId>com.h3xstream.findsecbugs</groupId>
							<artifactId>findsecbugs-plugin</artifactId>
							<version>1.10.1</version>
						</plugin>
					</plugins>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
<!-- for deploying to sonatype: clean source:jar javadoc:jar verify gpg:sign 
	install:install deploy:deploy -DskipTests then login to https://s01.oss.sonatype.org/ 
	and close the staging repository to release it to the central repository -->
